--- a/scss/modulos_scss/_variables.scss
+++ b/scss/modulos_scss/_variables.scss
@@ -2,3 +2,6 @@ $color-hover:rgb(209, 249, 227);
 $font-titulos:'Rye', cursive;
 $font-subtitulos:'Merriweather', serif;
 $font-parrafos: 'Merriweather';
+$duracion:60s;
+$color-fondo-de-explicacion:yellow;
+$color-difuminado:gray;
