--- a/scss/modulos_scss/_efectos_hover.scss
+++ b/scss/modulos_scss/_efectos_hover.scss
@@ -1,17 +1,29 @@
 ul li a
-    {
+{
     font-weight:bold !important;
     &:hover 
         {   
             background-color:$color_hover;
             font-size:130%;
         }
-    }
+}
 .eneatipos
-    {
-        margin:0;
+{
+    margin:0;
     &:hover
-            {
-                background-color:$color_hover; 
-            }
-        }
+    {
+        background-color:$color_hover; 
+    }
+}
+.dropup-content p:hover 
+{
+  background-color: white
+}
+.dropup:hover .dropup-content 
+{
+  display: block;
+}
+.dropup:hover .dropbtn 
+{
+  background-color: #2980B9;
+}
