--- a/formato_css/eneagrama.css
+++ b/formato_css/eneagrama.css
@@ -168,7 +168,7 @@ p {
         para ser leido 
 *******************************************  */
 #explicacion_inicial {
-  grid-column: 1/2;
+  grid-column: 1/3;
   grid-row: 3/4;
   display: grid;
   grid-template-columns: 50% 50%;
@@ -196,7 +196,7 @@ p {
   animation-name: entra_explicacion_inicial;
   animation-fill-mode: forwards;
   animation-delay: 0s;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear; }
 
@@ -212,8 +212,8 @@ p {
   visibility: hidden;
   animation-name: entra_explicacion_inicial;
   animation-fill-mode: forwards;
-  animation-delay: 6.66667s;
-  animation-duration: 6.66667s;
+  animation-delay: 3.33333s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear; }
 
@@ -229,8 +229,8 @@ p {
   visibility: hidden;
   animation-name: entra_explicacion_inicial;
   animation-fill-mode: forwards;
-  animation-delay: 13.33333s;
-  animation-duration: 6.66667s;
+  animation-delay: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear; }
 
@@ -246,8 +246,8 @@ p {
   visibility: hidden;
   animation-name: entra_explicacion_inicial;
   animation-fill-mode: forwards;
-  animation-delay: 20s;
-  animation-duration: 6.66667s;
+  animation-delay: 10s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear; }
 
@@ -263,8 +263,8 @@ p {
   visibility: hidden;
   animation-name: entra_explicacion_inicial;
   animation-fill-mode: forwards;
-  animation-delay: 26.66667s;
-  animation-duration: 6.66667s;
+  animation-delay: 13.33333s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear; }
 
@@ -280,8 +280,8 @@ p {
   visibility: hidden;
   animation-name: entra_explicacion_inicial;
   animation-fill-mode: forwards;
-  animation-delay: 33.33333s;
-  animation-duration: 6.66667s;
+  animation-delay: 16.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear; }
 
@@ -297,8 +297,8 @@ p {
   visibility: hidden;
   animation-name: entra_explicacion_inicial;
   animation-fill-mode: forwards;
-  animation-delay: 40s;
-  animation-duration: 6.66667s;
+  animation-delay: 20s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear; }
 
@@ -314,8 +314,8 @@ p {
   visibility: hidden;
   animation-name: entra_explicacion_inicial;
   animation-fill-mode: forwards;
-  animation-delay: 46.66667s;
-  animation-duration: 6.66667s;
+  animation-delay: 23.33333s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear; }
 
@@ -331,60 +331,49 @@ p {
   visibility: hidden;
   animation-name: entra_explicacion_inicial;
   animation-fill-mode: forwards;
-  animation-delay: 53.33333s;
-  animation-duration: 6.66667s;
+  animation-delay: 26.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear; }
 
 @keyframes entra_explicacion_inicial {
   0% {
     visibility: hidden;
-    transform: translate(950px, -100px);
-    size: 200%;
-    background-color: yellow;
-    font-weight: bold; }
-  10% {
-    visibility: visible;
-    transform: translate(950px, -100px);
-    size: 200%;
+    transform: translate(3px, 30px);
+    height: 100%;
     background-color: yellow;
     font-weight: bold; }
   80% {
     visibility: visible;
-    transform: translate(950px, -100px);
-    size: 200%;
+    transform: translate(3px, 30px);
+    height: 100%;
     background-color: transparent;
     font-weight: bold; }
   85% {
     visibility: visible;
-    transform: translate(950px, -100px);
-    size: 150%;
+    transform: translate(3px, 30px);
+    height: 80%;
     background-color: transparent;
     font-weight: 100; }
-  90% {
+  95% {
     visibility: visible;
-    transform: translate(950px, -100px);
-    size: 120%;
-    background-color: transparent;
-    font-weight: 100; }
-  94% {
-    visibility: hidden;
-    transform: translate(950px, -100px);
-    size: 120%;
+    transform: translate(3px, 30px);
+    height: 60%;
     background-color: transparent;
     font-weight: 100; }
   100% {
     visibility: hidden;
-    transform: translate(950px, -100px);
-    size: 120%;
-    background-color: transparent; } }
+    transform: translate(3px, 30px);
+    height: 40%;
+    background-color: transparent;
+    font-weight: 100; } }
 
 /* **************************************************
    se almacena la explicacion del camino en un cuadro 
                      difuminado en el fondo 
    **************************************************  */
 #explicacion {
-  grid-column: 2/12;
+  grid-column: 3/12;
   grid-row: 2/6;
   display: flex;
   flex-direction: row;
@@ -403,7 +392,7 @@ p {
   animation-name: entra_explicacion;
   animation-fill-mode: forwards;
   animation-delay: 0s;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   visibility: hidden;
@@ -419,8 +408,8 @@ p {
   color: black;
   animation-name: entra_explicacion;
   animation-fill-mode: forwards;
-  animation-delay: 6.66667s;
-  animation-duration: 6.66667s;
+  animation-delay: 3.33333s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   visibility: hidden;
@@ -436,8 +425,8 @@ p {
   color: black;
   animation-name: entra_explicacion;
   animation-fill-mode: forwards;
-  animation-delay: 13.33333s;
-  animation-duration: 6.66667s;
+  animation-delay: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   visibility: hidden;
@@ -453,8 +442,8 @@ p {
   color: black;
   animation-name: entra_explicacion;
   animation-fill-mode: forwards;
-  animation-delay: 20s;
-  animation-duration: 6.66667s;
+  animation-delay: 10s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   visibility: hidden;
@@ -470,8 +459,8 @@ p {
   color: black;
   animation-name: entra_explicacion;
   animation-fill-mode: forwards;
-  animation-delay: 26.66667s;
-  animation-duration: 6.66667s;
+  animation-delay: 13.33333s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   visibility: hidden;
@@ -487,8 +476,8 @@ p {
   color: black;
   animation-name: entra_explicacion;
   animation-fill-mode: forwards;
-  animation-delay: 33.33333s;
-  animation-duration: 6.66667s;
+  animation-delay: 16.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   visibility: hidden;
@@ -504,8 +493,8 @@ p {
   color: black;
   animation-name: entra_explicacion;
   animation-fill-mode: forwards;
-  animation-delay: 40s;
-  animation-duration: 6.66667s;
+  animation-delay: 20s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   visibility: hidden;
@@ -521,8 +510,8 @@ p {
   color: black;
   animation-name: entra_explicacion;
   animation-fill-mode: forwards;
-  animation-delay: 46.66667s;
-  animation-duration: 6.66667s;
+  animation-delay: 23.33333s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   visibility: hidden;
@@ -538,8 +527,8 @@ p {
   color: black;
   animation-name: entra_explicacion;
   animation-fill-mode: forwards;
-  animation-delay: 53.33333s;
-  animation-duration: 6.66667s;
+  animation-delay: 26.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   visibility: hidden;
@@ -583,7 +572,7 @@ p {
   animation-name: entra_flecha;
   animation-fill-mode: forwards;
   animation-delay: 0s;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1; }
 
 #flecha_2 {
@@ -596,8 +585,8 @@ p {
   color: transparent;
   animation-name: entra_flecha;
   animation-fill-mode: forwards;
-  animation-delay: 6.66667s;
-  animation-duration: 6.66667s;
+  animation-delay: 3.33333s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1; }
 
 #flecha_3 {
@@ -610,8 +599,8 @@ p {
   color: transparent;
   animation-name: entra_flecha;
   animation-fill-mode: forwards;
-  animation-delay: 13.33333s;
-  animation-duration: 6.66667s;
+  animation-delay: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1; }
 
 #flecha_4 {
@@ -624,8 +613,8 @@ p {
   color: transparent;
   animation-name: entra_flecha;
   animation-fill-mode: forwards;
-  animation-delay: 20s;
-  animation-duration: 6.66667s;
+  animation-delay: 10s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1; }
 
 #flecha_5 {
@@ -638,8 +627,8 @@ p {
   color: transparent;
   animation-name: entra_flecha;
   animation-fill-mode: forwards;
-  animation-delay: 26.66667s;
-  animation-duration: 6.66667s;
+  animation-delay: 13.33333s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1; }
 
 #flecha_6 {
@@ -652,8 +641,8 @@ p {
   color: transparent;
   animation-name: entra_flecha;
   animation-fill-mode: forwards;
-  animation-delay: 33.33333s;
-  animation-duration: 6.66667s;
+  animation-delay: 16.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1; }
 
 #flecha_7 {
@@ -666,8 +655,8 @@ p {
   color: transparent;
   animation-name: entra_flecha;
   animation-fill-mode: forwards;
-  animation-delay: 40s;
-  animation-duration: 6.66667s;
+  animation-delay: 20s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1; }
 
 #flecha_8 {
@@ -680,8 +669,8 @@ p {
   color: transparent;
   animation-name: entra_flecha;
   animation-fill-mode: forwards;
-  animation-delay: 46.66667s;
-  animation-duration: 6.66667s;
+  animation-delay: 23.33333s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1; }
 
 #flecha_9 {
@@ -694,8 +683,8 @@ p {
   color: transparent;
   animation-name: entra_flecha;
   animation-fill-mode: forwards;
-  animation-delay: 53.33333s;
-  animation-duration: 6.66667s;
+  animation-delay: 26.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1; }
 
 @keyframes entra_flecha {
@@ -712,9 +701,9 @@ p {
   top: 25px;
   left: 174px;
   animation-name: parpadeo_de_numero_1;
-  animation-delay: 33.33333s;
+  animation-delay: 16.66667s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   border: 1px solid transparent;
@@ -730,7 +719,7 @@ p {
   animation-name: parpadeo_de_numero;
   animation-delay: 0s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   border: 1px solid transparent;
@@ -743,9 +732,9 @@ p {
   top: 208px;
   left: 55px;
   animation-name: parpadeo_de_numero;
-  animation-delay: 6.66667s;
+  animation-delay: 3.33333s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   border: 1px solid transparent;
@@ -758,9 +747,9 @@ p {
   top: 23px;
   left: 38px;
   animation-name: parpadeo_de_numero;
-  animation-delay: 13.33333s;
+  animation-delay: 6.66667s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   border: 1px solid transparent;
@@ -773,9 +762,9 @@ p {
   top: 80px;
   left: 208px;
   animation-name: parpadeo_de_numero;
-  animation-delay: 20s;
+  animation-delay: 10s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   border: 1px solid transparent;
@@ -788,9 +777,9 @@ p {
   top: 203px;
   left: 155px;
   animation-name: parpadeo_de_numero;
-  animation-delay: 26.66667s;
+  animation-delay: 13.33333s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   border: 1px solid transparent;
@@ -803,9 +792,9 @@ p {
   top: 155px;
   left: 203px;
   animation-name: parpadeo_de_numero_1;
-  animation-delay: 53.33333s;
+  animation-delay: 26.66667s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   border: 1px solid transparent;
@@ -818,9 +807,9 @@ p {
   top: 155px;
   left: 4px;
   animation-name: parpadeo_de_numero;
-  animation-delay: 40s;
+  animation-delay: 20s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   border: 1px solid transparent;
@@ -833,9 +822,9 @@ p {
   top: 0px;
   left: 103px;
   animation-name: parpadeo_de_numero;
-  animation-delay: 46.66667s;
+  animation-delay: 23.33333s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   border: 1px solid transparent;
@@ -1065,7 +1054,7 @@ p {
   animation-name: realce_de_numero;
   animation-delay: 0s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   z-index: 15; }
@@ -1077,9 +1066,9 @@ p {
   left: 2px;
   color: transparent;
   animation-name: realce_de_numero;
-  animation-delay: 6.66667s;
+  animation-delay: 3.33333s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   z-index: 15; }
@@ -1091,9 +1080,9 @@ p {
   left: 55px;
   color: transparent;
   animation-name: realce_de_numero;
-  animation-delay: 13.33333s;
+  animation-delay: 6.66667s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   z-index: 15; }
@@ -1105,9 +1094,9 @@ p {
   left: 38px;
   color: transparent;
   animation-name: realce_de_numero;
-  animation-delay: 20s;
+  animation-delay: 10s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   z-index: 15; }
@@ -1119,9 +1108,9 @@ p {
   left: 208px;
   color: transparent;
   animation-name: realce_de_numero;
-  animation-delay: 26.66667s;
+  animation-delay: 13.33333s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   z-index: 15; }
@@ -1133,9 +1122,9 @@ p {
   left: 155px;
   color: transparent;
   animation-name: realce_de_numero;
-  animation-delay: 33.33333s;
+  animation-delay: 16.66667s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   z-index: 15; }
@@ -1147,9 +1136,9 @@ p {
   left: 203px;
   color: transparent;
   animation-name: realce_de_numero;
-  animation-delay: 40s;
+  animation-delay: 20s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   z-index: 15; }
@@ -1161,9 +1150,9 @@ p {
   left: 4px;
   color: transparent;
   animation-name: realce_de_numero;
-  animation-delay: 46.66667s;
+  animation-delay: 23.33333s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   z-index: 15; }
@@ -1175,9 +1164,9 @@ p {
   left: 103px;
   color: transparent;
   animation-name: realce_de_numero;
-  animation-delay: 53.33333s;
+  animation-delay: 26.66667s;
   animation-fill-mode: forwards;
-  animation-duration: 6.66667s;
+  animation-duration: 3.33333s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   z-index: 15; }
@@ -1222,7 +1211,7 @@ p {
   padding: 5px;
   width: fit-content;
   height: fit-content;
-  transform: translate(0px, 130px); }
+  transform: translate(200px, -205px); }
 
 #pie-de-pagina2 {
   grid-column: 6/12;
