--- a/scss/modulos_scss/_animacion_camino_inicial.scss
+++ b/scss/modulos_scss/_animacion_camino_inicial.scss
@@ -4,7 +4,7 @@
 *******************************************  */
 #explicacion_inicial
 {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row:3/4;
     display:grid;
     grid-template-columns: 50% 50%;
@@ -43,13 +43,11 @@
 }
 @keyframes entra_explicacion_inicial
 {
-    0% {visibility: hidden;transform:translate(950px, -100px); size:200%;background-color: $color-fondo-de-explicacion;font-weight: bold;}
-    10% {visibility:visible;transform:translate(950px, -100px); size:200%;background-color:$color-fondo-de-explicacion;font-weight: bold}
-    80% {visibility:visible;transform:translate(950px, -100px); size:200%;background-color:transparent;font-weight: bold}
-    85% {visibility:visible;transform:translate(950px, -100px); size:150%;background-color:transparent;font-weight:100}
-    90% {visibility:visible;transform:translate(950px, -100px); size:120%;background-color:transparent;font-weight:100}
-    94% {visibility:hidden;transform:translate(950px, -100px); size:120%;background-color:transparent;font-weight:100}
-    100% {visibility: hidden;transform:translate(950px, -100px); size:120%;background-color:transparent;}
+    0% {visibility: hidden;transform:translate(3px, 30px); height:100%;background-color: $color-fondo-de-explicacion;font-weight: bold;}
+    80% {visibility:visible;transform:translate(3px, 30px); height:100%;background-color:transparent;font-weight: bold}
+    85% {visibility:visible;transform:translate(3px, 30px); height:80%;background-color:transparent;font-weight:100}
+    95% {visibility:visible;transform:translate(3px, 30px); height:60%;background-color:transparent;font-weight:100}
+    100% {visibility: hidden;transform:translate(3px, 30px); height:40%;background-color:transparent;font-weight: 100;}
 }
 /* **************************************************
    se almacena la explicacion del camino en un cuadro 
@@ -57,7 +55,7 @@
    **************************************************  */
 #explicacion
 {
-    grid-column: 2/12;
+    grid-column: 3/12;
     grid-row: 2/6;
     display:flex;
     flex-direction: row;
