--- a/scss/modulos_scss/_animacion_de_numeros.scss
+++ b/scss/modulos_scss/_animacion_de_numeros.scss
@@ -9,7 +9,7 @@ $demora: 6 1 2 3 4 5 9 7 8;
         top:nth($top_numeros, $u);
         left:nth($left_numeros, $u);
         @if $u == 1 {animation-name:parpadeo_de_numero_1} @else if  $u == 7 {animation-name:parpadeo_de_numero_1} @else {animation-name:parpadeo_de_numero};
-        animation-delay: (nth($demora, $u)-1)*($duracion/9);   
+        animation-delay: $mandala-duration + (nth($demora, $u)-1)*($duracion/9);   
         animation-fill-mode: forwards;
         animation-duration: $duracion/9;
         animation-iteration-count: 1;
@@ -78,7 +78,7 @@ $demora: 6 1 2 3 4 5 9 7 8;
         left:nth($left_numeros, $e);
         color:transparent;
         animation-name: realce_de_numero;
-        animation-delay: ($duracion / 9) * ($e - 1);  
+        animation-delay: $mandala-duration + ($duracion / 9) * ($e - 1);  
         animation-fill-mode:forwards;
         animation-duration: $duracion/9 ;
         animation-iteration-count: 1;
