--- a/scss/modulos_scss/_animacion_del_mandala.scss
+++ b/scss/modulos_scss/_animacion_del_mandala.scss
@@ -18,7 +18,7 @@
     animation-timing-function: linear;
     animation-fill-mode: forwards;
     animation-delay: 0s;
-    animation-duration: 1s;
+    animation-duration: $mandala-duration;
     animation-iteration-count: 1;
     min-width: 150px;
     max-height: 180px;
