--- a/scss/modulos_scss/_variables.scss
+++ b/scss/modulos_scss/_variables.scss
@@ -3,5 +3,6 @@ $font-titulos:'Rye', cursive;
 $font-subtitulos:'Merriweather', serif;
 $font-parrafos: 'Merriweather';
 $duracion:30s;
+$mandala-duration:3s;
 $color-fondo-de-explicacion:yellow;
 $color-difuminado:gray;
