--- a/scss/modulos_scss/_animacion_camino_inicial.scss
+++ b/scss/modulos_scss/_animacion_camino_inicial.scss
@@ -2,15 +2,18 @@
     se exhibe el camino de cada eneatipo 
         para ser leido 
 *******************************************  */
-#explicacion_inicial
+#explicacion_inicial_1
 {
-    grid-column: 1/3;
-    grid-row:3/4;
-    display:grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 50%;
-    margin-top:30px;
+    margin-top:0px;
     margin-bottom:0px;
+    margin-left: 340px;
+    margin-right: 0px;
+    position:absolute;
+}
+#explicacion_inicial_2
+{
+    position:absolute;
+    width:auto;
 }
 .subtitulo_explicacion_inicial
 {
@@ -20,34 +23,41 @@
     font-style: italic;
     font-weight: bold;
 }
-@for $i from 1 through 9 
+@for $i from 1 through 10 
 { 
     .explicacion_del_camino_inicial:nth-of-type(#{$i})
     { 
-        grid-column: 1/3;
-        grid-row:1/3;
         border:1px solid black;
         border-radius:5px;
         background-color: $color-fondo-de-explicacion; 
-        padding :10px;
-        margin:10px;
-        height: fit-content;
+        padding :5px;
+        margin:8px;
+        height: 0%;
+        max-height: 270px;
         visibility:hidden;
-        animation-name: entra_explicacion_inicial;
+        @if $i<= 9 {animation-name: entra_explicacion_inicial;} @else {animation-name: mensaje_final}
         animation-fill-mode: forwards;
-        animation-delay: ( $duracion - $duracion * (( 10 - $i ) / 9 ) );
+        @if $i<= 9 {animation-delay: $mandala-duration + ( $duracion - $duracion * (( 10 - $i ) / 9 ) )} @else {animation-delay: $mandala-duration + $duracion};
         animation-duration: ( $duracion / 9);
         animation-iteration-count: 1;
         animation-timing-function:linear;
+        display:block;
     }
 }
 @keyframes entra_explicacion_inicial
 {
-    0% {visibility: hidden;transform:translate(3px, 30px); height:100%;background-color: $color-fondo-de-explicacion;font-weight: bold;}
-    80% {visibility:visible;transform:translate(3px, 30px); height:100%;background-color:transparent;font-weight: bold}
-    85% {visibility:visible;transform:translate(3px, 30px); height:80%;background-color:transparent;font-weight:100}
-    95% {visibility:visible;transform:translate(3px, 30px); height:60%;background-color:transparent;font-weight:100}
-    100% {visibility: hidden;transform:translate(3px, 30px); height:40%;background-color:transparent;font-weight: 100;}
+    0% {visibility: hidden;width:0px; height:100%;background-color: $color-fondo-de-explicacion;font-weight: bold;}
+    10% {visibility: visible;width:250px; height:100%;background-color: $color-fondo-de-explicacion;font-weight: bold;}
+    80% {visibility:visible;width:250px;height:100%;background-color:transparent;font-weight: bold}
+    85% {visibility:visible;width:250px;height:80%;background-color:transparent;font-weight:100}
+    95% {visibility:hidden;width:250px;height:60%;background-color:transparent;font-weight:100}
+    100% {visibility: hidden;width:0px;height:0px;background-color:transparent;font-weight: 100;}
+}
+@keyframes mensaje_final
+{
+    0% {visibility:hidden ;width:250px; height:100%;background-color: $color-fondo-de-explicacion;font-weight: bold;}
+    1% {visibility:visible ;width:250px; height:100%;background-color: $color-fondo-de-explicacion;font-weight: bold;}
+    100% {visibility:visible ;width:250px; height:100%;background-color: $color-fondo-de-explicacion;font-weight: bold;}
 }
 /* **************************************************
    se almacena la explicacion del camino en un cuadro 
@@ -55,13 +65,14 @@
    **************************************************  */
 #explicacion
 {
-    grid-column: 3/12;
-    grid-row: 2/6;
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin:0;
+    margin-top:30px;
+    margin-left: 20px;
     height:fit-content;
+    position:relative;
+    transform:translate(300px -50px);
 }
 .subtitulo_explicacion
 {
@@ -77,7 +88,7 @@
         color:black;
         animation-name: entra_explicacion;
         animation-fill-mode: forwards;
-        animation-delay: ( $duracion - $duracion * (( 10 - $i ) / 9 ) );
+        animation-delay: $mandala-duration + ( $duracion - $duracion * (( 10 - $i ) / 9 ) );
         animation-duration: $duracion/9;
         animation-iteration-count: 1;
         animation-timing-function:linear; 
@@ -93,8 +104,8 @@
 }
 @keyframes entra_explicacion 
 {
-    0% {visibility: hidden; color:$color-difuminado; font-size:10px}
-    50% {visibility: hidden; color:$color-difuminado; font-size:10px}
-    96% {visibility: hidden; color:$color-difuminado; font-size:10px;}
-    100% {visibility: visible; color:$color-difuminado; font-size:10px;}
+    0% {visibility: hidden; color:$color-difuminado; font-size:10px;transform: translate(25% -15%);}
+    50% {visibility: hidden; color:$color-difuminado; font-size:10px;transform: translate(25% -15%);}
+    96% {visibility: hidden; color:$color-difuminado; font-size:10px;transform: translate(25% -15%);}
+    100% {visibility: visible; color:$color-difuminado; font-size:10px;transform: translate(25% -15%);}
 } 
