--- a/scss/modulos_scss/_estilos_y_posiciones_caminos_animados.scss
+++ b/scss/modulos_scss/_estilos_y_posiciones_caminos_animados.scss
@@ -1,9 +1,3 @@
-#grilla
-{
-    display:grid;
-    grid-template-rows: repeat (5, 1fr);
-    grid-template-columns: repeat (12, 1fr);  
-}
 #header-1
 {
     grid-column: 3/11;
@@ -17,15 +11,16 @@
     grid-row:3/4;
     text-align: center;
     border: 1px solid black;
-    border-radius: 3px;
+    border-radius: 50%;
     background-color: aqua;
     color:blue;
     font-weight: bold;
-    margin:3px;
+    margin:0px;
     padding:5px;
-    width:fit-content;
-    height:fit-content;
-    transform:translate(200px, -205px);
+    width:80px;
+    height:80px;
+    position:absolute;
+    transform:translate(300%, -3px);
 }
 #pie-de-pagina2
 {
