--- a/scss/modulos_scss/_tipografia.scss
+++ b/scss/modulos_scss/_tipografia.scss
@@ -45,3 +45,13 @@ a
   font-size:90% !important;
   font-weight:bold !important;
 }
+.texto-boton
+{
+  font-size:75% !important;
+  font-weight:bolder !important;
+  /*font-family: 'Fredericka the Great', cursive;*/
+  font-family: 'Gloock', serif;
+/*  font-family: 'IM Fell DW Pica', serif;
+  font-family: 'Merriweather', serif;
+  font-family: 'Rye', cursive;*/
+}
